Made beginnig of diagnostic menu

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -262,6 +262,10 @@ layerrule = blur, powermenu
 layerrule = ignorezero, powermenu
 layerrule = blurpopups, powermenu
 
+layerrule = blur, diagnosticmenu
+layerrule = ignorezero, diagnosticmenu
+layerrule = blurpopups, diagnosticmenu
+
 layerrule = blur, quicksettings
 layerrule = ignorezero, quicksettings
 layerrule = blurpopups, quicksettings
