added more stuff

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -169,7 +169,8 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
+    workspace_swipe_distance = 2000
 }
 
 # Example per-device config
@@ -197,6 +198,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock # lock
+bind = $mainMod, S, exec, hyprshot -m region --clipboard-only
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
